--- a/Capstone+Project-DJ (2).html
+++ b/Capstone+Project-DJ (2).html
@@ -11974,7 +11974,7 @@ div.input {
 
 
 <div class="output_html rendered_html output_subarea ">
-<iframe width="100%" height="520" frameborder="0" src="montgomery_crime (1).html" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<iframe width="100%" height="520" frameborder="0" src="montgomery_crime.html" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 </div>
 
 </div>
